discussion/kv_engine/139669/139669_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Rename ENGINE_STORE_OPERATION to StoreSemantics

Change-Id: I82919ca138637fe76430fe5d60ca4c30f16954f5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-05 13:34:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-05 14:22:49.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14751/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14751/ )

Failure of a CTest test [2020-11-05T14:22:42.853Z]   2/393 Test #253: ep_testsuite_dcp.full_eviction.magma ........................................................................Child terminated ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7125/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5461/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/ep_testsuite_dcp.cc b/engines/ep/tests/ep_testsuite_dcp.cc
index b6e1fc776..075bb5cb2 100644
--- a/engines/ep/tests/ep_testsuite_dcp.cc
+++ b/engines/ep/tests/ep_testsuite_dcp.cc
@@ -8019,7 +8019,7 @@ static enum test_result test_mb19153(EngineIface* h) {
         std::stringstream ss;
         ss &lt;&lt; &quot;key-&quot; &lt;&lt; j;
         checkeq(ENGINE_SUCCESS,
-                store(h, NULL, StoreSemantics::Set, ss.str().c_str(), &quot;data&quot;),
+                store(h, nullptr, StoreSemantics::Set, ss.str().c_str(), &quot;data&quot;),
                 &quot;Failed to store a value&quot;);
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5461/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8022:26: warning: use nullptr [modernize-use-nullptr]
                store(h, NULL, StoreSemantics::Set, ss.str().c_str(), "data"),
                         ^~~~
                         nullptr
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8022:26: note: FIX-IT applied suggested code changes
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/ep_testsuite_dcp.cc b/engines/ep/tests/ep_testsuite_dcp.cc
index b6e1fc776..075bb5cb2 100644
--- a/engines/ep/tests/ep_testsuite_dcp.cc
+++ b/engines/ep/tests/ep_testsuite_dcp.cc
@@ -8019,7 +8019,7 @@ static enum test_result test_mb19153(EngineIface* h) {
         std::stringstream ss;
         ss &lt;&lt; &quot;key-&quot; &lt;&lt; j;
         checkeq(ENGINE_SUCCESS,
-                store(h, NULL, StoreSemantics::Set, ss.str().c_str(), &quot;data&quot;),
+                store(h, nullptr, StoreSemantics::Set, ss.str().c_str(), &quot;data&quot;),
                 &quot;Failed to store a value&quot;);
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5461/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31565/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1133): error: Expected: (activeRR) < (100), actual: 100 vs 100
[  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (1269 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31565/ )

Failure of a CTest test 230/393 Test #213: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31565/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3990/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27257/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6830/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6942/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5901/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
